@@ -3,6 +3,7 @@ documents those changes that are of interest to users and admins.
 
 * Changes in SLURM 2.1.0-pre10
 =============================
+ -- Improve sview layout of blocks in use.
 
 * Changes in SLURM 2.1.0-pre9
 =============================
